force-app/main/default/objects/RE_SDOHScores__c/RE_SDOHScores__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for SDOH category wise scoring.</description>
    <label>RE_SDOHScores</label>
</CustomObject>