force-app/main/default/objects/RE_SDOHScores__c/fields/ScoreColor__c.field-meta.xml
<CustomField>
    <fullName>ScoreColor__c</fullName>
    <description>Provide color based on the score value.</description>
    <inlineHelpText>Provide color based on the score value.</inlineHelpText>
    <label>ScoreColor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>