force-app/main/default/objects/RE_SDOHScores__c/fields/ScoreStatus__c.field-meta.xml
<CustomField>
    <fullName>ScoreStatus__c</fullName>
    <description>This field is use to store the mapping of SDOH Score Status based on Score. i.e. Stable, Vulnerable, In-Crisis</description>
    <label>Score Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>