force-app/main/default/objects/RE_SDOHScores__c/listViews/ScoreBasedOnColor.listView-meta.xml
<ListView>
    <fullName>ScoreBasedOnColor</fullName>
    <columns>NAME</columns>
    <columns>ScoreColor__c</columns>
    <columns>ScoreStatus__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Score__c</field>
        <operation>equals</operation>
    </filters>
    <label>Score Based on Color</label>
</ListView>