force-app/main/default/objects/RE_SDOHScores__c/listViews/ScoreBasedOnStatus.listView-meta.xml
<ListView>
    <fullName>ScoreBasedOnStatus</fullName>
    <columns>NAME</columns>
    <columns>ScoreColor__c</columns>
    <columns>ScoreStatus__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>ScoreStatus__c</field>
        
            <operation>equals</operation>
        
        </filters>
    <label>Score Based on Status</label>
</ListView>